# tuleap-mcp

./: .env.example  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-16-tuleap-mcp-server-plan.md  2026-04-28-ci-pipeline-update.md  2026-04-28-epic-methods.md  2026-04-28-tuleap-mcp-add-methods.md
docs/superpowers/specs/: 2026-04-16-tuleap-mcp-server-design.md  2026-04-28-ci-pipeline-design.md  2026-04-28-epic-methods-design.md
src/tuleap_mcp/: __init__.py  client.py  server.py
src/tuleap_mcp/tools/: __init__.py  agile.py  files.py  trackers.py  users.py
tests/: test_agile.py  test_client.py  test_files.py  test_trackers.py  test_users.py
