[project]
name = "tuleap-mcp"
version = "0.1.0"
description = "Tuleap MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "respx>=0.21.0",
    "ruff>=0.3.0",
    "bandit>=1.7.7",
]

[project.scripts]
tuleap-mcp = "tuleap_mcp.server:main"
